--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles/home.css">
         <title>BYUI WDD230</title>
+        <link type="text/css" rel="stylesheet" href="styles/home.css">
     </head>
     <body>
         <h1>This is a test page</h1>
