--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
         <title>BYUI WDD230</title>
         <link type="text/css" rel="stylesheet" href="styles/home.css">
     </head>
+    
     <body>
-        <h1>This is a test page</h1>
+        <header>
+            <h1>Thomas W. Manning III</h1>
+            
+        </header>
+        <h1>WDD 230: Assignment Portal</h1>
         <br>
+        <ul>
+            <li>Lesson 02: Title</li>
+            <li>Lesson 03: Title</li>
+            <li>Lesson 04: Title</li>
+            <li>Lesson 05: Title</li>
+            <li>Lesson 06: Title</li>
+            <li>Lesson 07: Title</li>
+            <li>Lesson 08: Title</li>
+            <li>Lesson 09: Title</li>
+            <li>Lesson 10: Title</li>
+            <li>Lesson 11: Title</li>
+        </ul>
         <p>This is a test of my new repository for wdd230 BYUI class</p>
     </body>
 </html>
