--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <header>
             <nav>
                 <a id="logo_link" href="Index.html">
-                    <img class="logo" src="https://twmanningiii.github.io/wdd230/images/tom.png">
+                    <img class="logo" src="https://twmanningiii.github.io/wdd230/images/tom.jpg">
                                         </a>
                 <a href="https://byui.instructure.com/profile">
-                    
+
                 </a>
                               
             </nav>
