--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <header>
             <nav>
                 <a id="logo_link" href="Index.html">
-                    <img class="logo" src="https://twmanningiii.github.io/wdd230/images/tom.jpg">
+                    <img class="logo" src="https://github.com/twmanningiii/wdd230/blob/main/images/tom.jpg">
                                         </a>
                 <a href="https://byui.instructure.com/profile">
 
                 </a>
+                <h1>Thomas W. Manning III</h1>
                               
             </nav>
-            <h1>Thomas W. Manning III</h1>
+            
 
         </header>
         <h1>WDD 230: Assignment Portal</h1>
